fixed scrolling issue on iOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -375,19 +375,23 @@ body > .container > .row {	/* remove if you want a bottom bar */
     flex-direction: column;
     display: flex;
     width: 100%;
-    max-height: calc( 100% - 210px);
+    max-height: calc( 100% - 42%);
 }
+
+
 .scrollDown {
-		min-height: 0%;
+	min-height: 0px;
+	height: 340px;
 	overflow-y: scroll;
 	overflow-x: hidden;
-	-webkit-overflow-scrolling: touch;
+
 }
-.scrollBottomDiv {
-	display: flex;
-    width: 100%;
-    flex-direction: column;
+@media (max-height: 569px) {
+	.scrollDown {
+     height: 250px;
+	}
 }
+
 
 
 
@@ -1082,6 +1086,7 @@ select:focus {
 .mb50						            {   margin-bottom		    : 50px !important;			            }
 .ml50									{	margin-left				: 50px !important;			            }
 .mr50						            {   margin-right		    : 50px !important;			            }
+.mb55						      {   margin-bottom		    : 55px !important;			            }
 
 .mt60									{	margin-top				: 60px !important;			            }
 .mb60						            {   margin-bottom		    : 60px !important;			            }
